--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -13,18 +13,18 @@
 
     <main>
         <form id="checkout-form">
-            <label for="name">Nombre Completo:</label>
+            <label for="name"><b>Nombre Completo:</b></label>
             <input type="text" id="name" required>
 
-            <label for="email">Correo Electrónico:</label>
+            <label for="email"><b>Correo Electrónico:</b></label>
             <input type="email" id="email" required>
 
-            <label for="address">Dirección de Facturación:</label>
+            <label for="address"><b>Dirección de Facturación:</b></label>
             <input type="text" id="address" required>
 
-            <label for="password">Contraseña:</label>
+            <label for="password"><b>Contraseña:</b></label>
             <input type="password" id="password" required>
-
+            <hr>
             <h3>Resumen de Compra</h3>
             <div id="summary">
                 <!-- caja resumen compra -->
